# UniAssignments

2nd sem/DSA/: A3 - DLLA IteratedListFINALFINAL.7z  A4 - HashTable SortedSet.7z  A5 - BST SortedSet as SLLA asa da!.7z  A5 FINAL.7z  SEM3.txt
2nd sem/DSA/A1 - DynamicVector SET/: App.cpp  CMakeLists.txt
2nd sem/DSA/A1 - DynamicVector SET/src/ExtendedTest/: ExtendedTest.cpp
2nd sem/DSA/A1 - DynamicVector SET/src/Set/: Set.cpp  Set.h  set_v2.cpp
2nd sem/DSA/A1 - DynamicVector SET/src/SetIterator/: SetIterator.cpp  SetIterator.h
2nd sem/DSA/A1 - DynamicVector SET/src/ShortTest/: ShortTest.cpp
2nd sem/DSA/A2 - DLL ADTMatrix/: App.cpp  Matrix.cpp  MatrixIterator.cpp  MatrixIterator.h
2nd sem/DSA/A2 - SLL MultiMap/: App.cpp  ExtendedTest.cpp  SMMIterator.cpp  SMMIterator.h  ShortTest.cpp  SortedMultiMap.cpp  SortedMultiMap.h  implementation2.cpp
2nd sem/DSA/A2 - SLL MultiMap - implementation2/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  SMMIterator.cpp  SMMIterator.h  ShortTest.cpp  SortedMultiMap.cpp  SortedMultiMap.h
2nd sem/DSA/A3 - DLLA IteratedList/: App.cpp  CMakeLists.txt  IteratedList.cpp  IteratedList.h  ListIterator.cpp  ListIterator.h  ShortTest.cpp
2nd sem/DSA/A3 - DLLA IteratedListFINALFINAL/: CMakeLists.txt  IteratedList.cpp  IteratedList.h  ListIterator.cpp  ListIterator.h  ShortTest.cpp
2nd sem/DSA/A3 DLLA IteratedListFINAL/: CMakeLists.txt  IteratedList.cpp  IteratedList.h  ListIterator.cpp  ListIterator.h  ShortTest.cpp
2nd sem/DSA/A3 indexedList/: CMakeLists.txt  IndexedList.cpp  IndexedList.h  ListIterator.cpp  ListIterator.h
2nd sem/DSA/A4 - HashTable SortedSet/: CMakeLists.txt  ExtendedTest.cpp  ShortTest.cpp  SortedSet.cpp  SortedSet.h  SortedSetIterator.cpp  SortedSetIterator.h
2nd sem/DSA/A4 HashTable SortedSet/: CMakeLists.txt  ExtendedTest.cpp  ShortTest.cpp  SortedSet.cpp  SortedSet.h  SortedSetIterator.cpp  SortedSetIterator.h
2nd sem/DSA/A5 - BST SortedBag/: CMakeLists.txt  ExtendedTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h
2nd sem/DSA/A5 - BST SortedSet as SLLA/: SortedSet.cpp  SortedSetIterator.cpp  SortedSetIterator.h
2nd sem/DSA/A5 - BST SortedSet as SLLA asa da!/: SortedSet.h  SortedSetIterator.cpp  SortedSetIterator.h
2nd sem/DSA/A5 - BST SortedSet on array/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  ShortTest.cpp  SortedSet.cpp  SortedSet.h  SortedSetIterator.cpp  SortedSetIterator.h
2nd sem/DSA/A5 FINAL/: CMakeLists.txt  ShortTest.cpp  SortedSet.h
2nd sem/DSA/A5 FINAL - BST SortedSet on array/: SortedSet.cpp  SortedSetIterator.cpp  SortedSetIterator.h
2nd sem/DSA/A5 sorted set/: App.cpp  ExtendedTest.cpp  SortedBag.cpp  SortedBag.h
2nd sem/DSA/ADTMatrix_Dll/: CMakeLists.txt  ExtendedTest.cpp  Matrix.h
2nd sem/DSA/fixed kmap dsa/: App.cpp  CMakeLists.txt  FixedCapBiMap.cpp  FixedCapBiMap.h  ShortTest.cpp
2nd sem/DSA/set dsa/: App.cpp  ShortTest.cpp
2nd sem/DSA/untitled/: data.in  main.cpp
2nd sem/GA/: CMakeLists.txt
2nd sem/GA/Exam Recap/: questions.txt
2nd sem/GA/Homework 5/: main.cpp
2nd sem/GA/assignment lab 2/: CMakeLists.txt  main.cpp
2nd sem/GA/nouc++/: CMakeLists.txt  main.cpp
2nd sem/OOP/: sem2.txt
2nd sem/OOP/A45 AnastasiaSusciuc/: CMakeLists.txt  main.cpp
2nd sem/OOP/A45 AnastasiaSusciuc/Domain/: tutorial.cpp  tutorial.h
2nd sem/OOP/A45 AnastasiaSusciuc/DynamicVector/: DynamicVector.h
2nd sem/OOP/A45 AnastasiaSusciuc/Repository/: TutorialsRepository.cpp  TutorialsRepository.h  WatchListRepository.cpp  WatchListRepository.h
2nd sem/OOP/A45 AnastasiaSusciuc/Service/: AdminService.cpp  AdminService.h  UserService.cpp  UserService.h
2nd sem/OOP/A45 AnastasiaSusciuc/Tests/: tests.cpp  tests.h
2nd sem/OOP/A45 AnastasiaSusciuc/UI/: UI.cpp  UI.h
2nd sem/OOP/Generate/: CMakeLists.txt  GUI.cpp  GUI.h  Product.cpp  Product.h  Repo.cpp  Repo.h  Service.cpp  Service.h  main.cpp
2nd sem/OOP/OOP exam recap 1/: CMakeLists.txt  Vegetable.cpp  Vegetable.h
2nd sem/OOP/Seminar_OOP_W10/: CMakeLists.txt  main.cpp
2nd sem/OOP/Seminar_OOP_W10/Domain/: BasicComponent.cpp  BasicComponent.h  BorderedComponent.cpp  BorderedComponent.h  HorizontalLayout.cpp  HorizontalLayout.h  IBasicComponent.cpp  IBasicComponent.h  IBorderedComponent.cpp  IBorderedComponent.h  IComponent.cpp  IComponent.h  ILayout.cpp  ILayout.h  Label.cpp  Label.h  VerticalLayout.cpp  VerticalLayout.h
2nd sem/OOP/Seminar_OOP_W10/tests/: test.cpp  test.h
2nd sem/OOP/a10-AnastasiaSusciuc/untitled/: CMakeLists.txt  main.cpp
2nd sem/OOP/a10-AnastasiaSusciuc/untitled/Domain/: tutorial.cpp  tutorial.h
2nd sem/OOP/a10-AnastasiaSusciuc/untitled/DynamicVector/: DynamicVector.cpp
2nd sem/OOP/a10-AnastasiaSusciuc/untitled/Exception/: repository_exception.cpp  repository_exception.h  validation_exception.cpp  validation_exception.h
2nd sem/OOP/a10-AnastasiaSusciuc/untitled/Files/: input.txt  watchlist.csv  watchlist.html
2nd sem/OOP/a10-AnastasiaSusciuc/untitled/GUI/: AdminGUI.cpp  AdminGUI.h  ChartGUI.cpp  ChartGUI.h  PersistenceGUI.cpp  PersistenceGUI.h  QtMenu.cpp  QtMenu.h  UserGUI.cpp  UserGUI.h  nice_stylesheets.qss
2nd sem/OOP/a10-AnastasiaSusciuc/untitled/Repository/: CSVWatchList.cpp  CSVWatchList.h  FileRepository.cpp  FileRepository.h  HTMLWatchList.cpp  HTMLWatchList.h  WatchListRepository.cpp  WatchListRepository.h
2nd sem/OOP/a10-AnastasiaSusciuc/untitled/Service/: AdminService.cpp  AdminService.h  AdminServiceUndoRedo.cpp  AdminServiceUndoRedo.h  UserService.cpp  UserService.h
2nd sem/OOP/a10-AnastasiaSusciuc/untitled/Tests/: tests.cpp  tests.h
2nd sem/OOP/a10-AnastasiaSusciuc/untitled/UI/: UI.cpp  UI.h
2nd sem/OOP/a10-AnastasiaSusciuc/untitled/Validators/: admin_input_validator.cpp  admin_input_validator.h
2nd sem/OOP/a10-AnastasiaSusciuc/untitled/manager/: Manager.cpp  Manager.h
2nd sem/OOP/exam_practic2/: CMakeLists.txt  GUI.cpp  GUI.h  ProgWindow.cpp  ProgWindow.h  Repo.cpp  (+14 more)
2nd sem/OS/: Solutions.txt  commands os.txt  os.txt  tutorial.txt
2nd sem/SD/: lab1.mw  lab2.mw  lab3.mw  lab4.mw  lab5.mw  maple_lab5_2.mw
2nd sem/pythonProject/: main.py
(+53 files in other folders)
